fix configuration